--- a/choices.html
+++ b/choices.html
@@ -3,12 +3,14 @@
 	<head>
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	    <meta name="apple-mobile-web-app-capable" content="yes" />
 	    <meta name="format-detection" content="telephone=no,date=no,address=no,email=no" />
 	    <title>你的团队是什么鬼？WTF:What Team do you F**k?</title>
 	    <link rel="stylesheet" href="css/choices.css" />
 	</head>
 	<body>
+		<section class="ui-mask">
+			<div class="ui-loading"></div>
+		</section>
 		<div class="ui-content">
 			<header class="ui-question">
 				<div class="ui-question-frame">
@@ -49,10 +51,10 @@
 			<div class="ui-btn-layout">
 				<a href="javascript:void(0);" class="ui-btn ui-btn-disabled">下一题</a>
 			</div>
-			<footer class="ui-footer">
+			<!-- <footer class="ui-footer">
 				<div class="ui-footer-hr"></div>
 				<div class="ui-footer-copyright">BangWork正经出品</div>
-			</footer>
+			</footer> -->
 		</div>
 		<script type="text/javascript" src="js/zepto.min.js" ></script>
 		<script type="text/javascript" src="js/choices.js" ></script>
