--- a/result.html
+++ b/result.html
@@ -14,17 +14,16 @@
 		<div class="ui-content">
 			<section class="ui-container ui-result">
 				<div class="ui-result-titleframe">
-					团队基因测试结果
 				</div>
 				<div class="ui-loading"></div>
 				<div class="ui-result-detail fn-hide">
 					<div class="ui-detail-card" data-company="">
 						<div class="ui-nav ui-card-title">
-							<span>最像</span>
+							最像
 							<span class="ui-company-name"></span>
 						</div>
 						<div class="ui-card-star">
-							<span>【相似度】</span>
+							【相似度】
 							<ul class="ui-star-list">
 								<li></li>
 								<li></li>
@@ -42,8 +41,8 @@
 							<img src="" class="ui-card-photo" />
 						</div>
 						<div class="ui-nav ui-card-suggest">
-							<div>【效果】</div>
-							<div><span>五年后,</span><span class="ui-company-slogen"></span></div>
+							<div class="ui-space-slogenTitle">【效果】</div>
+							<div class="ui-space-slogen">五年后,<span class="ui-company-slogen"></span></div>
 						</div>
 					</div>
 				</div>
@@ -64,8 +63,8 @@
 					<a href="javascript:void(0);" class="ui-btn ui-btn-share">分享</a>
 				</div>
 			</section>
-			<script type="text/javascript" src="js/zepto.min.js" ></script>
-			<script type="text/javascript" src="js/result.js" ></script>
 		</div>
+		<script type="text/javascript" src="js/zepto.min.js" ></script>
+		<script type="text/javascript" src="js/result.js" ></script>
 	</body>
 </html>
