--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				}( )
 			};
 
-			if ( !browser.versions.android || !browser.versions.ios ){	
+			if ( !( browser.versions.android || !browser.versions.ios ) ){	
 				self.location = "http://zhbh.github.io/teamStyle/scan.html";
 			}
 
