--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="ui-loading"></div>
 		</section>
 		<div class="ui-content">
-			<img src="../img/bg_index.jpg" class="ui-bg-img" />
+			<img src="img/bg_index.jpg" class="ui-bg-img" />
 			<div class="ui-btn-layout" style="display: none;">
 				<a href="choices.html" class="ui-btn">开始测试</a>
 			</div>
